Closed
Bug 1298638
Opened 9 years ago
Closed 9 years ago
Crash in mozilla::layers::APZEventState::ProcessAPZStateChange
Categories
(Core :: Panning and Zooming, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla51
Tracking | Status | |
---|---|---|
firefox48 | --- | unaffected |
firefox49 | --- | unaffected |
firefox50 | --- | unaffected |
firefox51 | --- | fixed |
People
(Reporter: marcia, Assigned: rhunt)
References
Details
(Keywords: crash, regression, Whiteboard: [gfx-noted])
Crash Data
Attachments
(1 file)
1.81 KB,
patch
|
kats
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-8bb1e627-1793-4304-b0ee-150302160827.
=============================================================
Seen while looking at nightly crash stats: http://bit.ly/2cioCUF. Crash affects Windows and Mac.
Adding ni on kats to weigh in since it looks it touches code in an area he works in.
Flags: needinfo?(bugmail)
Comment 1•9 years ago
|
||
As of bug 1289650 mAPZEventState gets nulled out in the ChromeProcessController before the object is destroyed, so we need to add null checks. This crash looks like it happens because we invoke a function on a destroyed APZEventState object during shutdown. Assigning to Ryan; the patch should be pretty straightforward. Crash-stats is already showing 20 of these crashes so we should fix it soonish.
Assignee: nobody → rhunt
Blocks: 1289650
status-firefox50:
--- → unaffected
Flags: needinfo?(bugmail)
Keywords: regression
Priority: -- → P1
Whiteboard: [gfx-noted]
Version: Trunk → 51 Branch
![]() |
||
Comment 2•9 years ago
|
||
18 crashes on Mac in Nightly 20160826030226, making it the #2 Mac crash. (On Windows it's #36 in that Nightly, with 4 crashes so far.)
Assignee | ||
Comment 3•9 years ago
|
||
Attachment #8785818 -
Flags: review?(bugmail)
Updated•9 years ago
|
Attachment #8785818 -
Flags: review?(bugmail) → review+
Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
Pushed by kgupta@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/a36f77d091f6
Check if mAPZEventState is null. r=kats
Keywords: checkin-needed
Updated•9 years ago
|
status-firefox48:
--- → unaffected
status-firefox49:
--- → unaffected
Comment 5•9 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in
before you can comment on or make changes to this bug.
Description
•