Bug 1298638 - Check if mAPZEventState is null. r=kats

MozReview-Commit-ID: E6fx5zVUzIU